--- a/meniu.html
+++ b/meniu.html
@@ -13,13 +13,15 @@
    <div><a href="index.html"><p>Grįžti</p></a></div>
     <h1>Meniu</h1>
     <h2>Pagrindiniai patiekalai</h2>
-    <p>1. Sumuštinis "Firminis"</p>
+    <p>1. Dienos specialus</p>
+    <p class="sudetis">Klausti darbuotojo.</p>
+    <p>2. Sumuštinis "Firminis"</p>
     <p class="sudetis">Baltoji duona, mocarela sūris, kalakutienos mėsa, ketčupas. KARŠTAS</p>
-    <p>2. Sumuštinis "Firminis aštrus"</p>
+    <p>3. Sumuštinis "Firminis aštrus"</p>
     <p class="sudetis">Baltoji duona, mocarela sūris, kalakutienos mėsa, Sriracha padažas. KARŠTAS</p>
-    <p>3. Sumuštinis "Firminis Premium"</p>
+    <p>4. Sumuštinis "Firminis Premium"</p>
     <p class="sudetis">Premium baltoji duona, mocarela sūris, kalakutienos mėsa, ketčupas. KARŠTAS</p>
-    <p>4. Dribsniai su pienu "Sukamoji svajonė"</p>
+    <p>5. Dribsniai su pienu "Sukamoji svajonė"</p>
     <p class="sudetis">Pienas (karvės arba kokoso), "Sukamoji svajonė" dribsniai.</p>
     <h2>Gėrimai</h2>
     <p>1. Pienas</p>
